src/components/UI/Header/Header.css
.navbar {
    display: grid;
    grid-template-columns: 2fr 1fr;
    height: 4rem;
    background-color: #202020;
    color: #ffffff;
    transition: all 0.3s ease;
}

.navbar.light {
    background-color: #f5f5f5;
    color: #000000;
}

.navbar a {
    color: #ffffff;
    text-decoration: none;
}

.navbar a.light {
    color: #000000;
}

.navbar_logo-container {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    padding-left: 2em;
}

.navbar_logo-container a {
    font-weight: bold;
    font-size: xx-large;
}


.navbar_options-container {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    padding-right: 2em;
}

.navbar_ul {
    display: flex;
    align-items: center;
    gap: 1em;
    height: 100%;
    list-style-type: none;
}

.navbar_ul li a {
    padding: 0.5em 1em 0.5em 1em;
    border-radius: 5px;
    transition: all 0.3s ease;
}

.navbar_ul li a:hover {
    color: #000000;
    background-color: #ffffff;
}

.navbar_ul li a.light:hover {
    background-color: #000000;
    color: #ffffff;
}

.navbar_ul li a.navlink-active {
    font-weight: bold;
    color: #000000;
    background-color: #ffffff;
}

.navbar_ul li a.navlink-active.light {
    font-weight: bold;
    background-color: #000000;
    color: #ffffff;
}

.navbar_themeIcon {
    color: #ffff00;
    margin: 1.15em 1em auto 1em;
    font-size: larger;
    transition: all 0.3s ease;
}

.navbar_themeIcon_sun {
    color: #ff0000;
}

.navbar_themeIcon:hover {
    transform: scale(1.3);
}

.navbar_hamicon {
    font-size: xx-large;
    transition: all 0.3s ease;
}

.navbar_hamicon:hover {
    padding: 0.2em;
    border-radius: 5px;
    background-color: #ffffff;
    color: #000000;
}



@media (max-width:640px) {
    .navbar_ul {
        position: absolute;
        z-index: 999;
        inset: 0 0 auto auto;
        display: flex;
        flex-direction: column;
        min-width: 50%;
        height: 100dvh;
        gap: 0em;
        background-color: #202020;
        transition: all 0.3s ease;
    }

    .navbar_ul.light {
        background-color: #f5f5f5;
    }

    .hide {
        translate: 300px 0;
        pointer-events: none;
    }

    .navbar_ul li {
        text-align: center;
        width: 100%;
    }

    .navbar_ul li a {
        display: block;
        height: 100%;
        width: 100%;
        border-radius: 0;
        padding: 1.5em;
    }
}

